--- a/src/styles/menu.scss
+++ b/src/styles/menu.scss
@@ -8,7 +8,6 @@
   bottom: 1.5rem;
   @include for-small-desktop-down {
     right: 0.5rem;
-    bottom: 0.5rem;
   }
   button {
     cursor: pointer;
